2025-11-14 公司完成代码 web端能访问，未能播放

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.0.15
   # 网络相关
   connectivity_plus: ^4.0.1
+  network_info_plus: ^7.0.0
   # 状态管理
   provider: ^6.0.5
   # 服务器框架
